@@ -59,6 +59,8 @@ $_lang['gridclasskey.mgr_top_js_desc'] = 'This JS file will be loaded before oth
 $_lang['gridclasskey.mgr_bottom_js'] = 'Additional bottom JS file on manager loading';
 $_lang['gridclasskey.mgr_bottom_js_desc'] = 'This JS file will be loaded after other JS files when opening this container';
 $_lang['gridclasskey.editor_type'] = 'Editor Type';
+$_lang['gridclasskey.childrentab_text'] = 'Text for "Children" tab';
+$_lang['gridclasskey.childrentab_text_desc'] = 'Replace the text for "Children" tab for this container only. Leave it empty for the default.';
 $_lang['gridclasskey.addnewdocbtn_text'] = 'Text for "Add New Document" button';
 $_lang['gridclasskey.addnewdocbtn_text_desc'] = 'Replace the text for "Add New Document" button for this container only. Leave it empty for the default.';
 $_lang['gridclasskey.output_filter'] = 'Output Filter';
